# BotBitCoin

./: .env  .env.development  .env.example  .env.production  .env.test  .gitignore  README.md  config_fast.yaml  config_full.yaml  config_full_nostop.yaml  index.html  package-lock.json  package.json  pyproject.toml  rl_trading_btc_xauusd.md  test_cuda.py  test_gpu_training.py
data/: bitcoin_historical.csv
docs/: reward_design_change_log.md  roadmap-recompensas-RL.md
public/: dataset_debug.json  trades.json  training_history.json  training_status.json
python/: README.md  main.py  requirements.txt
python/config/: config.py
python/data/: bitcoin_historical.csv  feature_engineer.py  preprocessor.py  xauusd_test.csv  xauusd_train_2025.csv
python/environment/: bitcoin_env.py  env_factory.py  orderbook_env.py
python/evaluation/: backtester.py  backtrader_runner.py  backtrader_strategies.py  validation_xauusd.py
python/integrations/: supabase_client.py
python/models/: agent_factory.py  dqn_agent.py  qrdqn_agent.py
python/scripts/: check_agent_device.py  check_cuda.py  check_versions.py  download_data.py
python/tests/: test_agent_dims.py  test_backtester_metrics.py  test_cli_env_integration.py  test_config_fields.py  test_costs_consistency.py  test_env_factory.py  test_env_selection.py  test_orderbook_env.py  test_orderbook_env_exec_costs.py  test_orderbook_env_reward.py  test_orderbook_env_signature.py  test_performance_quick_episode.py  test_supabase_client.py  test_trainer_supabase_integration.py  (+2 more)
src/: index.css
supabase/: config.toml
(+19 files in other folders)
