[tool.poetry]
name = "botbitcoin"
version = "0.1.0"
description = "Projeto de trading RL para Bitcoin (ambiente, agente, backtester)"
readme = "python/README.md"
authors = ["BotBitCoin Contributors"]

# Removed custom PyTorch sources to simplify locking and installation

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.3.0"
pandas = "^2.3.0"
stable-baselines3 = "^2.3.0"
gymnasium = "^0.29.1"
scikit-learn = "^1.4.0"
ta = "0.11.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
plotly = "5.16.1"
ccxt = "^4.5.0"
yfinance = "0.2.28"
requests = "2.31.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "1.0.0"
tqdm = "4.66.1"
pyyaml = "6.0.1"
tensorboard = "^2.16.0"
sympy = "^1.12"
rich = "^14.2.0"
torch = "^2.0.1"
backtrader = "^1.9.78.123"
reportlab = "^4.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "python"
]
testpaths = [
    "python/tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"